horizontal scroll fix

--- a/source/less/global.less
+++ b/source/less/global.less
@@ -67,8 +67,8 @@ body {
   }
 
   .full-width {
-    margin-left: calc(-99.1vw / 2 + 960px / 2);
-    margin-right: calc(-99.1vw / 2 + 960px / 2);
+    margin-left: calc(-100vw / 2 + 977px / 2);
+    margin-right: calc(-100vw / 2 + 977px / 2);
   }
 }
 
